--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,14 @@
                 <scope>test</scope>
             </dependency>
 
-            <dependency><![CDATA[
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>2.2.0</version>
+            </dependency>
+
+
+        <dependency><![CDATA[
                 ]]><groupId>org.apache.commons</groupId>
                 <artifactId>commons-csv</artifactId>
                 <version>1.10.0</version>
@@ -63,6 +70,7 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.1.8</version>
         </dependency>
+
 
 
 
